Bug 387877 - last main window size is not stored
Summary: last main window size is not stored
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-13 20:39 UTC by uwestoehr
Modified: 2018-01-30 20:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-12-13 20:39:07 UTC
- open LabPlot and move its main window e.g. to the lower left of your screen
- close LabPlot
- open LabPlot again

result: the main window does not have the size and the position you used the last time. All other programs I have installed store the size/position.
Comment 1 Alexander Semke 2018-01-30 20:13:56 UTC
Git commit 5d929200ce7365d316cdd4dcb400f22b4e637efe by Alexander Semke.
Committed on 30/01/2018 at 20:13.
Pushed by asemke into branch 'master'.

Save and restore the geometry of the main window.
FIXED-IN: 2.5

M  +5    -2    src/kdefrontend/MainWin.cpp

https://commits.kde.org/labplot/5d929200ce7365d316cdd4dcb400f22b4e637efe