Save and restore the geometry of the main window.

BUG: 387877
FIXED-IN: 2.5